# ibm-data-science-cert-capstone

./: 01-data-collection.ipynb  02-data-wrangling.ipynb  03-data-scraping.ipynb  04-eda-basic.ipynb  05-eda-sql.ipynb  06-eda-predictions.ipynb  07-eda-folium.ipynb  08-predictions.ipynb  09-dash-analysis.ipynb  09-dashboard.py  helpers.py  pyproject.toml  readme.md
data/: 01_collected_data.csv  02_falcon9_data.csv  03_scrapped_data.csv  04_eda_data.csv  05_spacex_data.sqlite3  06_prediction_data.csv
