[project]
name = "ibm-data-science-cert-capstone"
version = "0.1.0"
description = "IBM Data Science Certification Capstone"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dash>=3.2.0",
    "folium>=0.20.0",
    "ipykernel>=6.30.1",
    "ipython-sql>=0.5.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "prettytable>=3.16.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
